logs/formconvert.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BareNecessities-0.2.8.egg-info'...
Listing './lib/python3.5/site-packages/ConversionKit-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/FormBuild-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/FormConvert-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/NestedRecord-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/RecordConvert-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/StringConvert-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/WebHelpers-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/bn'...
Compiling './lib/python3.5/site-packages/bn/__init__.py'...
***   File "./lib/python3.5/site-packages/bn/__init__.py", line 170
    except error, err:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/conversionkit'...
Compiling './lib/python3.5/site-packages/conversionkit/__init__.py'...
***   File "./lib/python3.5/site-packages/conversionkit/__init__.py", line 49
    except formencode.Invalid, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/formbuild'...
Compiling './lib/python3.5/site-packages/formbuild/helpers.py'...
***   File "./lib/python3.5/site-packages/formbuild/helpers.py", line 207
    if align <> 'table':
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/formconvert'...
Listing './lib/python3.5/site-packages/nestedrecord'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/recordconvert'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/stringconvert'...
Compiling './lib/python3.5/site-packages/stringconvert/__init__.py'...
***   File "./lib/python3.5/site-packages/stringconvert/__init__.py", line 83
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringconvert/email.py'...
***   File "./lib/python3.5/site-packages/stringconvert/email.py", line 114
    except (socket.error, DNS.DNSError), e:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/stringconvert/url.py'...
***   File "./lib/python3.5/site-packages/stringconvert/url.py", line 11
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webhelpers'...
Listing './lib/python3.5/site-packages/webhelpers/commands'...
Listing './lib/python3.5/site-packages/webhelpers/html'...
Compiling './lib/python3.5/site-packages/webhelpers/markdown.py'...
***   File "./lib/python3.5/site-packages/webhelpers/markdown.py", line 1865
    print OPTPARSE_WARNING
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/media.py'...
***   File "./lib/python3.5/site-packages/webhelpers/media.py", line 107
    print "%s:" % apath,
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/paginate.py'...
***   File "./lib/python3.5/site-packages/webhelpers/paginate.py", line 182
    raise Exception, "__getitem__ without slicing not supported"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webhelpers/pagination'...
Compiling './lib/python3.5/site-packages/webhelpers/pagination/__init__.py'...
***   File "./lib/python3.5/site-packages/webhelpers/pagination/__init__.py", line 175
    raise IndexError, "list index out of range"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webhelpers/pagination/orm.py'...
***   File "./lib/python3.5/site-packages/webhelpers/pagination/orm.py", line 46
    raise Exception, "SQLObjectLazy doesn't support getitem without slicing"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webhelpers/public'...
Listing './lib/python3.5/site-packages/webhelpers/public/stylesheets'...
Listing './lib/python3.5/site-packages/webhelpers/rails'...
Listing './lib/python3.5/site-packages/webhelpers/rails/javascripts'...
Compiling './lib/python3.5/site-packages/webhelpers/string24.py'...
***   File "./lib/python3.5/site-packages/webhelpers/string24.py", line 70
    raise ValueError, "maketrans arguments must have same length"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webhelpers/textile.py'...
***   File "./lib/python3.5/site-packages/webhelpers/textile.py", line 2882
    print textile('tell me about textile.', head_offset=1)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
